@@ -1,12 +1,0 @@
-<?php
-
-namespace SimpleComplex\Utils\Exception;
-
-/**
- * @package SimpleComplex\Utils
- */
-
-class CacheInvalidArgumentException extends \InvalidArgumentException implements \Psr\SimpleCache\InvalidArgumentException
-{
-
-}
