@@ -1,12 +1,0 @@
-<?php
-
-namespace SimpleComplex\Utils\Exception;
-
-/**
- * @package SimpleComplex\Utils
- */
-
-class ConfigInvalidArgumentException extends CacheInvalidArgumentException
-{
-
-}
